fuel/modules/fuel/assets/css/fuel.css
/* ... */
div#fuel_main_content_compact { background-color: #fff; overflow: auto; position: absolute; top: 99px; left: 0px; right: 0px; bottom: 0px; }

/* dashboard */
div.dashboard_pod { float: left; margin-right: 10px }
div.dashboard_module { float: left; margin-right: 10px; margin-top: 10px; }

/* filters */
div#filters { position: absolute; right: 15px; top: 12px; }
a#multi_delete { display: block; }
.adv_search { position: absolute; min-width: 360px; background: white; border: 1px solid #b6b6b6; z-index: 1000; left: -120px; padding: 10px 15px; display: none;
  -moz-box-shadow: 1px 3px 5px 1px rgba(0,0,0,0.3); 
  -webkit-box-shadow: 1px 3px 5px 1px rgba(0,0,0,0.3);
  box-shadow: 2px 2px 10px 1px rgba(0,0,0,0.3); }
 }
.adv_search .more_filters { max-height: 500px; overflow-y: auto; }
.adv_search .more_filters div div { float: none; overflow: hidden; margin-bottom: 7px; }
.adv_search .label { width: 100px; }
.adv_search input[type="text"] { max-width: 217px; }
.search_input { position: relative; }
.search_input #adv-search-btn { position: absolute; right: 5px; top: 5px; padding-top: 5px; height: 10px; }

/* other items */
div#other_items { float: left; margin: 2px 20px 0px 20px; }
div#other_items select{  max-width: 250px;}

/* button bar*/
div#action_btns { position: absolute; top: 9px; left: 15px; height: 29px; overflow: hidden; }
div.buttonbar ul {  height: 27px; float: left; }
div.buttonbar li { border-top: 1px solid #ccc; border-left: 1px solid #b9b9b9; border-bottom: 1px solid #b9b9b9; float: left;list-style: none;  margin: 0;
  background: #e6e6e6 url(../images/btn.png) repeat-x; 
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff), color-stop(1, #ddd));
  background: -moz-linear-gradient(top center, #fff 0%, #ddd 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#dddddd');
 }
div.buttonbar li:hover { background-position: 0 -27px; 
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff), color-stop(1, #eee));
  background: -moz-linear-gradient(top center, #fff 0%, #eee 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#eeeeee');
-moz-box-shadow: inset 0 0 5px #ddd;
-webkit-box-shadow: inset 0 0 5px #ddd;
box-shadow: inner 0 0 5px #ddd;
  }
div.buttonbar li.active { background-position: 0 -54px; 
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #ddd), color-stop(1, #fff));
  background: -moz-linear-gradient(top center, #ddd 0%, #fff 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#dddddd', endColorstr='#ffffff');
}
div.buttonbar li.active a { color: #000; }
div.buttonbar li a { color: #0e3e7e; height: 22px; line-height: 20px; display: block; padding: 0 11px 1px 26px; margin-top: 4px; }
div.buttonbar li.spacer, li.unattached { margin-left: 10px;}
div.buttonbar li:last-child, li.unattached { border-right: 1px solid #b9b9b9; }
div.buttonbar li.end { border-right: 1px solid #b9b9b9; } /* on own line so it will work in IE 8 */
div.buttonbar li:first-child, div.buttonbar li.unattached { -webkit-border-top-left-radius: 4px; -webkit-border-bottom-left-radius: 4px; -moz-border-radius-topleft: 4px; -moz-border-radius-bottomleft: 4px; border-top-left-radius: 4px; border-bottom-left-radius: 4px; }
div.buttonbar li:last-child, div.buttonbar li.unattached { -webkit-border-top-right-radius: 4px; -webkit-border-bottom-right-radius: 4px; -moz-border-radius-topright: 4px; -moz-border-radius-bottomright: 4px; border-top-right-radius: 4px; border-bottom-right-radius: 4px; }
div.buttonbar li.start { border-left: 1px solid #b9b9b9; }
div.save_cancel { height: 35px;  }
div.save_cancel li { margin: 5px 3px; }

/* form tabs */
div.form_tabs li { padding: 5px 15px; list-style: none; margin: 0 3px 0 0; border-left: 1px solid #eee; border-right: 1px solid #eee; border-top: 1px solid #eee; text-align: center; float: left; font-weight: bold; background-color: #ffffff; -webkit-border-top-left-radius: 4px; -webkit-border-top-right-radius: 4px; -moz-border-radius-topleft: 4px; -moz-border-radius-topright: 4px; border-top-left-radius: 4px; border-top-right-radius: 4px; }
div.form_tabs li.active { background-color: #eee; }
div.form_tabs li.active a { color: #333; }

/* box buttons use for manage */
div.boxbuttons li {  float: left; display: block; list-style: none; width: 110px; height: 60px;  border: 1px solid #ccc;  margin-bottom: 15px; margin-right: 15px; }
div.boxbuttons li a { display: block; text-align: center; padding: 10px 5px 5px 5px; width: 100px; height: 45px; background-color: #fff; }
div.boxbuttons li a:hover { background-color: #f6f6f6; }
div.boxbuttons li i { display: block; padding: 0; margin: auto; width: 21px; height: 22px; padding-right: 5px; }

/* notification */
div#fuel_notification { height: 21px; border-bottom: 1px solid #ccc; background-color: #ecf1f5; text-overflow: ellipsis; overflow: hidden; position: relative; }
div.notification p, div.notification div, div.notification ul {  margin: 0; min-height: 15px; line-height: 15px; padding: 3px 0 3px 35px; list-style: none; background-repeat: no-repeat; list-style: none; }
div.notification .ico { line-height: 15px; }

/* pagination */
div#pagination { position: absolute; z-index: 1; right: 0px; top: -3px; text-align: right; padding-right: 25px; }
div#pagination a { line-height: 21px; padding: 0 3px; border: 1px solid #ccc; background-color: #f9f9f9; }
div#pagination a:hover { background-color: #fdfdfd; } 
div#pagination b { color: #fff; background-color: #4f7193; line-height: 21px; padding: 0 3px; border: 1px solid #ccc;  }

/* module description */
div#module_description { border-bottom: 1px solid #ccc; background-color: #f6f6f6; padding: 15px; }
div#module_description p { margin: 0; }

/* data table */
div#table_loader { position: absolute; top: 20px; left: 50%; margin-left: -25px; z-index: 2;}
div#data_table_container { padding: 6px 0; }
/* ... */

